--- a/style.css
+++ b/style.css
@@ -25,8 +25,13 @@ body{
    padding-right: 50px;
    font-size: 18px;
    color: #424242;
-  
+
 }
+
+.nav-list>a:hover{
+  color:black;
+}
+
 .nav-head{
    font-size: 45px;
    width: 600;
@@ -188,6 +193,9 @@ body{
    left: 600px;
    bottom: 170px;
  }
+
+
+
  .small-btn{
    font-size: 25px;
  }
@@ -221,12 +229,20 @@ body{
 
  .icons{
    border: 2px solid #FF900E;
-   height: 243px;
-   width: 243px;
+   height: 200px;
+   width: 200px;
    padding: 40px;
    margin-bottom: 100px;
-   border-radius: 7px;
+   border-radius: 10px;
+   transition: 0.8s;
    
+ }
+
+ .icons:hover{
+  background-color:lightgray;
+ transform: scale(110%);
+
+
  }
 
  .icon-pera{
@@ -327,5 +343,4 @@ body{
     flex-direction: column;
     align-items: center;
    }
-     
-}
+  }
